sidebar z-index issue fixed

--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -55,6 +55,71 @@ header .header-right {
   display: flex;
   align-items: center;
 }
+header .header-right .search-header {
+  position: relative;
+}
+header .header-right .search-header .search-btn {
+  background-color: transparent;
+  color: #6e7781;
+  transition: 150ms ease-in-out;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.375rem;
+  margin-right: 1rem;
+}
+header .header-right .search-header .search-btn:hover {
+  color: #24292f;
+}
+header .header-right .search-header .search-area {
+  display: none;
+  background-color: #FFF;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 0.375rem;
+  padding: 1rem;
+  flex-direction: column;
+  position: absolute;
+  top: 4rem;
+  right: 0rem;
+  width: 20rem;
+  z-index: 999999999999;
+}
+header .header-right .search-header .search-area.search-area-opened {
+  display: block;
+}
+header .header-right .search-header .search-area form .search-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .header-right .search-header .search-area form .search-box input {
+  padding: 0.6rem 0.8rem;
+  border-radius: 0.375rem;
+  outline: none;
+  transition: 150ms ease-in-out;
+  background-color: #f6f8fa;
+}
+header .header-right .search-header .search-area form .search-box button {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.375rem;
+  transition: 150ms ease-in-out;
+  color: #FFF;
+  background-color: #ff4500;
+}
+header .header-right .search-header .search-area form select {
+  border: none;
+  outline: none;
+  border-radius: 0.375rem;
+  padding: 0.3rem;
+  margin-bottom: 1rem;
+}
 header .header-right .header-user img {
   width: 2rem;
   height: auto;
@@ -80,9 +145,10 @@ header .header-right .hamburgerMenuBtn {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 5rem;
-  height: 5rem;
+  width: 3rem;
+  height: 3rem;
   cursor: pointer;
+  margin-right: 1rem;
 }
 header .header-right .hamburgerMenuBtn .hamburgerSpan {
   width: 2rem;
@@ -197,6 +263,9 @@ nav#mobileNavbar .mobile-user:hover i {
   #headerUser {
     display: none;
   }
+  .search-area {
+    right: 0rem;
+  }
 }
 main .main-flow {
   margin-bottom: 2rem;
@@ -308,7 +377,6 @@ main .sidebar .sidebar-item .sidebar-item-header {
   margin-bottom: 2rem;
   border-radius: 0.375rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  position: relative;
 }
 main .sidebar .sidebar-item .sidebar-item-header i {
   margin-right: 0.6rem;
@@ -320,18 +388,6 @@ main .sidebar .sidebar-item .sidebar-item-header a {
 }
 main .sidebar .sidebar-item .sidebar-item-header a:hover {
   color: #24292f;
-}
-main .sidebar .sidebar-item .sidebar-item-header::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 1.25rem;
-  width: 3px;
-  top: 50%;
-  transform: translateY(-50%);
-  border-radius: 2px;
-  background-color: #ff4500;
-  opacity: 0.4;
 }
 main .sidebar .sidebar-item .sidebar-item-body {
   padding: 0 1.5rem;
@@ -393,6 +449,10 @@ footer {
   border-radius: 0.375rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   padding: 2rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5rem;
+  z-index: 0;
 }
 footer p {
   margin-bottom: 1rem;
@@ -492,4 +552,10 @@ body {
 
 .dark-layer-opened {
   display: block;
+}
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=main.css.map */
