--- a/assets/style/scss/_defaults.scss
+++ b/assets/style/scss/_defaults.scss
@@ -53,3 +53,10 @@ body {
 .dark-layer-opened {
     display: block;
 }
+
+
+@media screen and (max-width: 1200px) {
+    html {
+        font-size: 14px;
+    }
+}
