--- a/assets/style/scss/components/_header.scss
+++ b/assets/style/scss/components/_header.scss
@@ -68,6 +68,85 @@ header {
         display: flex;
         align-items: center;
 
+        .search-header {
+            position: relative;
+
+            .search-btn {
+                background-color: transparent;
+                color: #6e7781;
+                transition: 150ms ease-in-out;
+                font-size: 1.2rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 2.5rem;
+                height: 2.5rem;
+                border-radius: .375rem;
+                margin-right: 1rem;
+                &:hover {
+                    color: #24292f;
+                }
+            }
+
+            .search-area {
+                display: none;
+                background-color: #FFF;
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+                border-radius: .375rem;
+                padding: 1rem;
+                flex-direction: column;
+                position: absolute;
+                top: 4rem;
+                right: 0rem;
+                width: 20rem;
+                z-index: 999999999999;
+
+                &.search-area-opened {
+                    display: block;
+                }
+
+                form {
+                    .search-box {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        input {
+                            padding: .6rem .8rem;
+                            border-radius: .375rem;
+                            outline: none;
+                            transition: 150ms ease-in-out;
+                            background-color: #f6f8fa;   
+                        }
+    
+                        button {
+                            width: 2.5rem;
+                            height: 2.5rem;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            border-radius: .375rem;
+                            transition: 150ms ease-in-out;
+                            color: #FFF;
+    
+                            background-color: #ff4500;
+                        }
+                    }
+
+                    select {
+                        border: none;
+                        outline: none;
+                        border-radius: .375rem;
+                        padding: .3rem;
+                        margin-bottom: 1rem;
+                    }
+
+                    
+                }
+            }
+        }
+        
+
         .header-user {
             img {
                 width: 2rem;
@@ -102,9 +181,10 @@ header {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            width: 5rem;
-            height: 5rem;
+            width: 3rem;
+            height: 3rem;
             cursor: pointer;
+            margin-right: 1rem;
 
             .hamburgerSpan {
                 width: 2rem;
@@ -253,5 +333,9 @@ nav#mobileNavbar {
 
     #headerUser {
         display: none;
+    }
+
+    .search-area {
+        right: 0rem;
     }
 }
